// Vitest Snapshot v1

exports[`generateRouteManifest function > basic-routes 1`] = `
{
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
  "layout/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "layout/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "layout/About": {
    "componentName": "about-index",
    "file": "About/index.tsx",
    "id": "layout/About",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About",
  },
  "layout/About/me": {
    "componentName": "about-me-index",
    "file": "About/me/index.tsx",
    "id": "layout/About/me",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About/me",
  },
  "layout/home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "layout/home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
}
`;

exports[`generateRouteManifest function > define-extra-routes 1`] = `
{
  "/about-me": {
    "componentName": "about-index",
    "file": "About/index.tsx",
    "id": "/about-me",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "/about-me",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
  "layout/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "layout/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "layout/About/me": {
    "componentName": "about-me-index",
    "file": "About/me/index.tsx",
    "id": "layout/About/me",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About/me",
  },
  "layout/home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "layout/home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
}
`;

exports[`generateRouteManifest function > doc-delimeters-routes 1`] = `
{
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
  "layout/home/news": {
    "componentName": "home.news",
    "file": "home.news.tsx",
    "id": "layout/home/news",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home/news",
  },
}
`;

exports[`generateRouteManifest function > dynamic-routes 1`] = `
{
  "/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": undefined,
    "path": undefined,
  },
  "about": {
    "componentName": "about",
    "file": "about.tsx",
    "id": "about",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "about",
  },
  "blog": {
    "componentName": "blog-index",
    "file": "blog/index.tsx",
    "id": "blog",
    "index": true,
    "layout": false,
    "parentId": undefined,
    "path": "blog",
  },
  "blog/:id": {
    "componentName": "blog-$id",
    "file": "blog/$id.tsx",
    "id": "blog/:id",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "blog/:id",
  },
}
`;

exports[`generateRouteManifest function > escape-routes 1`] = `
{
  "1.pdf": {
    "componentName": "1[.pdf]",
    "file": "1[.pdf].tsx",
    "id": "1.pdf",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "1.pdf",
  },
  "index": {
    "componentName": "[index]",
    "file": "[index].tsx",
    "id": "index",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "index",
  },
}
`;

exports[`generateRouteManifest function > ignore-routes 1`] = `
{
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
  "layout/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "layout/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "layout/About/me": {
    "componentName": "about-me-index",
    "file": "About/me/index.tsx",
    "id": "layout/About/me",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About/me",
  },
  "layout/home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "layout/home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
}
`;

exports[`generateRouteManifest function > layout-routes 1`] = `
{
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
  "layout/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "layout/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "layout/about": {
    "componentName": "about",
    "file": "about.tsx",
    "id": "layout/about",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "about",
  },
  "layout/blog/layout": {
    "componentName": "blog-layout",
    "file": "blog/layout.tsx",
    "id": "layout/blog/layout",
    "index": undefined,
    "layout": true,
    "parentId": "layout",
    "path": "blog",
  },
  "layout/blog/layout/": {
    "componentName": "blog-index",
    "file": "blog/index.tsx",
    "id": "layout/blog/layout/",
    "index": true,
    "layout": false,
    "parentId": "layout/blog/layout",
    "path": undefined,
  },
  "layout/blog/layout/:id": {
    "componentName": "blog-$id",
    "file": "blog/$id.tsx",
    "id": "layout/blog/layout/:id",
    "index": undefined,
    "layout": false,
    "parentId": "layout/blog/layout",
    "path": ":id",
  },
  "layout/home/layout": {
    "componentName": "home-layout",
    "file": "home/layout.tsx",
    "id": "layout/home/layout",
    "index": undefined,
    "layout": true,
    "parentId": "layout",
    "path": "home",
  },
  "layout/home/layout/": {
    "componentName": "home-index",
    "file": "home/index.tsx",
    "id": "layout/home/layout/",
    "index": true,
    "layout": false,
    "parentId": "layout/home/layout",
    "path": undefined,
  },
  "layout/home/layout/layout": {
    "componentName": "home-layout-index",
    "file": "home/layout/index.tsx",
    "id": "layout/home/layout/layout",
    "index": true,
    "layout": true,
    "parentId": "layout/home/layout",
    "path": "layout",
  },
}
`;

exports[`generateRouteManifest function > nested-routes 1`] = `
{
  "a/b/c": {
    "componentName": "a-b-c",
    "file": "a/b/c.tsx",
    "id": "a/b/c",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "a/b/c",
  },
  "d/e/f": {
    "componentName": "d.e.f",
    "file": "d.e.f.tsx",
    "id": "d/e/f",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "d/e/f",
  },
}
`;

exports[`generateRouteManifest function > nexted-routes-with-same-children 1`] = `
{
  "/prefix-a": {
    "componentName": "layout-a",
    "file": "layout-a.tsx",
    "id": "/prefix-a",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "/prefix-a",
  },
  "/prefix-a/base": {
    "componentName": "layout-a-a",
    "file": "layout-a-a.tsx",
    "id": "/prefix-a/base",
    "index": undefined,
    "layout": false,
    "parentId": "/prefix-a",
    "path": "base",
  },
  "/prefix-a/base/index": {
    "componentName": "a",
    "file": "a.tsx",
    "id": "/prefix-a/base/index",
    "index": undefined,
    "layout": false,
    "parentId": "/prefix-a/base",
    "path": "index",
  },
  "/prefix-b": {
    "componentName": "layout-b",
    "file": "layout-b.tsx",
    "id": "/prefix-b",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "/prefix-b",
  },
  "/prefix-b/base": {
    "componentName": "layout-b-b",
    "file": "layout-b-b.tsx",
    "id": "/prefix-b/base",
    "index": undefined,
    "layout": false,
    "parentId": "/prefix-b",
    "path": "base",
  },
  "/prefix-b/base/index": {
    "componentName": "b",
    "file": "b.tsx",
    "id": "/prefix-b/base/index",
    "index": undefined,
    "layout": false,
    "parentId": "/prefix-b/base",
    "path": "index",
  },
}
`;

exports[`generateRouteManifest function > splat-routes 1`] = `
{
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
  "layout/*": {
    "componentName": "$",
    "file": "$.tsx",
    "id": "layout/*",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "*",
  },
  "layout/home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "layout/home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
}
`;
